--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -11,7 +11,7 @@ esphome:
   friendly_name: ${friendly_name}
   name_add_mac_suffix: true
   project:
-    name: "homeassistant/device-templates"
+    name: sebrauschmidt.device-templates"
     version: "0.1"
 
 esp8266:
@@ -29,15 +29,13 @@ logger:
   baud_rate: 0
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
   ap:
     ssid: '${devicename}'
 
 captive_portal:
 
 dashboard_import:
-  package_import_url: https://git.sebschmidt.de/homeassistant/device-templates/src/branch/main/power-plugs/gosund-sp1.yaml
+  package_import_url: github://sebrauschmidt/device-templates/power-plugs/gosund-sp1.yaml
   import_full_config: false
 
 ##############################################
