--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -11,8 +11,8 @@ esphome:
   friendly_name: ${friendly_name}
   name_add_mac_suffix: true
   project:
-    name: sebrauschmidt.device-templates"
-    version: "0.1"
+    name: sebrauschmidt.device-templates
+    version: "0.2"
 
 esp8266:
   board: esp8285
