--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -12,8 +12,8 @@ esphome:
   friendly_name: ${friendly_name}
   name_add_mac_suffix: true
   project:
-    name: sebrauschmidt.gosund-sp1
-    version: "0.2"
+    name: "Sebastian Schmidt.Gosund SP1"
+    version: "1.0.0"
 
 esp8266:
   board: esp8285
