--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -13,7 +13,7 @@ esphome:
   name_add_mac_suffix: true
   project:
     name: "Sebastian Schmidt.Gosund SP1"
-    version: "1.0.0"
+    version: "1.0.1"
 
 esp8266:
   board: esp8285
@@ -82,6 +82,7 @@ switch:
     name: "Kindersicherung"
     id: child_lock
     entity_category: config
+    optimisitc: true
 
 sensor:
   - platform: hlw8012
@@ -135,9 +136,8 @@ text_sensor:
 time:
   - platform: sntp
     id: sntp_time
-    name: "Geräteuhrzeit"
-    entity_category: 'diagnostic'
     timezone: Europe/Berlin
     servers:
       - 0.pool.ntp.org
       - 1.pool.ntp.org
+      - 2.pool.ntp.org
