--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -13,7 +13,7 @@ esphome:
   name_add_mac_suffix: true
   project:
     name: "Sebastian Schmidt.Gosund SP1"
-    version: "1.0.1"
+    version: "1.0.0"
 
 esp8266:
   board: esp8285
@@ -82,7 +82,7 @@ switch:
     name: "Kindersicherung"
     id: child_lock
     entity_category: config
-    optimisitc: true
+    optimistic: true
 
 sensor:
   - platform: hlw8012
