--- a/power-strips/gosund-p1.yaml
+++ b/power-strips/gosund-p1.yaml
@@ -30,7 +30,7 @@ logger:
 
 wifi:
   ap:
-    ssid: '${devicename}'
+    ssid: '${name}'
     manual_ip:
       static_ip: 192.168.4.1
       gateway: 192.168.4.1
