--- a/relays/shelly-2pm.yaml
+++ b/relays/shelly-2pm.yaml
@@ -39,7 +39,7 @@ wifi:
 captive_portal:
 
 dashboard_import:
-  package_import_url: github://sebrauschmidt/device-templates/relays/shelly-2pm.yaml
+  package_import_url: github://sebrauschmidt/device-templates/relays/shelly-2pm.yaml@main
   import_full_config: false
 
 ##############################################
