--- a/power-plugs/gosund-sp1.yaml
+++ b/power-plugs/gosund-sp1.yaml
@@ -12,8 +12,8 @@ esphome:
   friendly_name: ${friendly_name}
   name_add_mac_suffix: true
   project:
-    name: "Sebastian Schmidt.Gosund SP1"
-    version: "1.0.0"
+    name: "Sebastian Schmidt-Eichler.Gosund SP1"
+    version: "1.0.1"
 
 esp8266:
   board: esp8285
@@ -23,6 +23,7 @@ api:
   reboot_timeout: '${reboot_timeout}'
 
 ota:
+  - platform: esphome
 
 logger:
   baud_rate: 0
