--- a/power-strips/gosund-p1.yaml
+++ b/power-strips/gosund-p1.yaml
@@ -15,8 +15,8 @@ esphome:
   friendly_name: ${friendly_name}
   name_add_mac_suffix: true
   project:
-    name: "Sebastian Schmidt.Gosund P1"
-    version: "0.2.0"
+    name: "Sebastian Schmidt-Eichler.Gosund P1"
+    version: "1.0.1"
 
 esp8266:
   board: esp8285
@@ -25,7 +25,7 @@ esp8266:
 api:
   reboot_timeout: '${reboot_timeout}'
 ota:
-  platform: esphome
+  - platform: esphome
 logger:
   baud_rate: 0
 
