--- a/relays/shelly-1-mini-gen3.yaml
+++ b/relays/shelly-1-mini-gen3.yaml
@@ -15,7 +15,7 @@ esphome:
     version: "0.2.1"
 
 dashboard_import:
-  package_import_url: github://sebrauschmidt/device-templates/relays/shelly-1-mini-gen3.yaml
+  package_import_url: github://sebrauschmidt/device-templates/relays/shelly-1-mini-gen3.yaml@main
   import_full_config: false
 
 esp32:
