Removed duplicate ip sensor

--- a/relays/shelly-1-mini-gen3.yaml
+++ b/relays/shelly-1-mini-gen3.yaml
@@ -12,7 +12,7 @@ esphome:
   friendly_name: "${friendly_name}"
   project:
     name: "Sebastian Schmidt-Eichler.Shelly 1 Mini Gen 3"
-    version: "0.2.1"
+    version: "0.2.2"
 
 dashboard_import:
   package_import_url: github://sebrauschmidt/device-templates/relays/shelly-1-mini-gen3.yaml@main
@@ -102,12 +102,9 @@ sensor:
 text_sensor:
   - platform: version
     name: "Version"
+    hide_timestamp: True
     entity_category: "diagnostic"
   - platform: wifi_info
-    ip_address:
-      name: "IP-Adresse"
-      address_0: 
-        name: "WiFi"
     mac_address: 
       name: "MAC-Adresse"
     power_save_mode:
@@ -134,6 +131,7 @@ switch:
 
 binary_sensor:
   - platform: gpio
+    inverted: True
     name: "Schalter"
     id: switch_input
     pin: 10
@@ -182,4 +180,4 @@ select:
 status_led:
   pin:
     number: 0
-    inverted: true
+    inverted: True
