Put the ota mode switch in entity config

--- a/relays/shelly-1-mini-gen3.yaml
+++ b/relays/shelly-1-mini-gen3.yaml
@@ -137,6 +137,7 @@ switch:
     name: "OTA Modus"
     id: ota_mode
     optimistic: true
+    entity_category: "config"
 
 binary_sensor:
   - platform: gpio
